@@ -1,3 +1,11 @@
+2006-05-23 Sandro Santilli <strk@refractions.net>
+
+	* source/io/ByteOrderValues.cpp: changed
+	ENDIAN_BIG and ENDIAN_LITTLE values to match
+	WKBConstants::XDR and WKBConstants::NDR respectively.
+	* source/headers/geos/io/WKBConstants.h: added
+	comments about meaning of XDR/NDR.
+
 2006-05-19 Sandro Santilli <strk@refractions.net>
 
 	* source/simplify/TopologyPreservingSimplifier.cpp:
